--- a/index.html
+++ b/index.html
@@ -3,43 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz App</title>
+  <title>Portal 6 Wrap Up</title>
   <link href="styles.css" rel="stylesheet">
   <script defer src="script.js"></script>
 </head>
 
 <div class="container">
-  <div id="question-container" class="hide">
-    <div class="numbers" id="numbers">
-      <img src='one.png' alt='Number One' id='number-one' class='hide number-one' height="50px" width="`50px">
-      <img src='two.png' alt='Number Two' id='number-two' class='hide number-two' height="50px" width="`50px">
-      <img src='three.png' alt='Number Three' id='number-three' class='hide number-three' height="50px" width="`50px">
-      <img src='four.png' alt='Number Four' id='number-four' class='hide number-four' height="50px" width="`50px">
-      <img src='five.png' alt='Number Five' id='number-five' class='hide number-five' height="50px" width="`50px">
-      <img src='six.png' alt='Number Six' id='number-six' class='hide number-six' height="50px" width="`50px">
-      <img src='seven.png' alt='Number Seven' id='number-seven' class='hide number-seven' height="50px" width="`50px">
-      <img src='eight.png' alt='Number Eight' id='number-eight' class='hide number-eight' height="50px" width="`50px">
-      <img src='nine.png' alt='Number Nine' id='number-nine' class='hide number-nine' height="50px" width="`50px">
-      <img src='ten.png' alt='Number Ten' id='number-ten' class='hide number-ten' height="50px" width="`50px">
-    </div>
-    <div id="question">Question</div>
-    <div id="answer-buttons" class="btn-grid">
-      <button class="btn">Answer 1</button>
-      <button class="btn">Answer 2</button>
-      <button class="btn">Answer 3</button>
-      <button class="btn">Answer 4</button>
-    </div>
+  <div class=counter>
+    <span id="right-answers" class='hide hide-end'></span>
   </div>
-  <div class=start-text>
-
+  <div id="question-container" class="hide">
+    <div class="question-title" id="question-title">
+      <img src="question-title.png" id="question-title" alt="question-title" class="question-title" width="160" height="42">
+    </div>
+    <div class="questions-and-answers" id="questions-and-answers">
+      <div id="question">Question</div>
+      <div id="answer-buttons" class="btn-grid">
+        <button class="answer-btn btn">Answer 1</button>
+        <button class="answer-btn btn">Answer 2</button>
+        <button class="answer-btn btn">Answer 3</button>
+        <button class="answer-btn btn">Answer 4</button>
+      </div>
+    </div>
   </div>
   <div class="controls">
     <div class='start-screen'>
-      <img src='RobotBoard.png' id='robot-start' alt="Robot Board" width="400 px" height=" px">
+      <img src='RobotBoard.png' id='robot-start' alt="Robot Board" width="400 px" height="190 px">
       <div id='start-text' class='start-text'>
         <p>There will be a series of 10 questions all about the Grading System. Answering this quiz with a score of <strong>at least 6 and above</strong> will reward you a secret to access the next portal.</p>
       </div>
       <input type="image" src="StartButton.png" name="start-btn" id="start-btn" class="start-btn">
+    </div>
+    <div>
+      <div class="end-page">
+        <img src='PassPage.png' id="pass-page" alt="Pass Page" class="hide" width="600 px" height="254 px" >
+        <img src='FailPage.png' id="fail-page" alt="Fail Page" class="hide" width="600 px" height="254 px" >
+        <input type="image" src="RestartButton.png" name="restart-btn" id="restart-btn" class="restart-btn hide">
+        <input type="image" src="ReturnButton.png" name="return-btn" id="return-btn" class="return-btn hide">
+      </div>
     </div>
     <input type="image" src="NextButton.png" name="next-btn" id="next-btn" class="next-btn hide">
   </div>
